Fixed trigger button on IE

--- a/src/Cimplicity.Views.WebClient/src/app/components/rules_report_table/_rules_report_table.scss
+++ b/src/Cimplicity.Views.WebClient/src/app/components/rules_report_table/_rules_report_table.scss
@@ -73,6 +73,10 @@
 
 		}
 
+		.modal-footer{
+			position: relative;
+		}
+
 		.rule-to-edit-summary{
 			text-align: center;
 			font-size: 1.3rem;
@@ -111,6 +115,7 @@
 		.btn-trigger-next{
 			position: absolute;
 			left: 16px;
+			top: 16px;
 		}
 	}
 }
